--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/vacuumlabs/adalite#readme",
   "scripts": {},
   "dependencies": {
-    "@cardano-foundation/ledgerjs-hw-app-cardano": "https://github.com/vacuumlabs/ledgerjs-cardano-shelley/releases/download/v3.1.0-catalyst-rc.5/cardano-foundation-ledgerjs-hw-app-cardano-v3.1.0-catalyst-rc.5.tgz",
+    "@cardano-foundation/ledgerjs-hw-app-cardano": "3.1.0",
     "@ledgerhq/hw-transport": "^5.43.0",
     "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
     "@ledgerhq/hw-transport-webusb": "^5.43.0",
